seseragi/css/styles.css
/* Seseragi 2024 */
/* (c)2015-2024 Steve Knoblock Creative Commons License */

/* Seseragi - Fonts */
/* http://www.google.com/fonts#UsePlace:use/Collection:Lato|Lora|Inconsolata */
@import url(http://fonts.googleapis.com/css?family=Lato|Lora|Inconsolata);

/* Seseragi - Base */
:root {
  --bg-color: #eee;
  --black-level: #000;
  --body-font: "Lora", "Georgia", "Times New Roman", "Times", serif;
  --body-font-size: 1.0em;
  --body-line-height:  1.5;

  --drop-cap-font: "ReithSans", sans;

  --seseragi-gray: #eee;
  --seseragi-white: #fff;
  --seseragi-black: #000;
  --seseragi-blue: #3377AA;

  --layout-margin: auto;
}

body {
  margin: 0;
  padding: 0;
  border: 0;
}

.margin-set {
  margin-left: auto;
  margin-right: auto;
  max-width: 45em;
}

/* Seseragi 2020 - Typography */

body {
  background-color: var(--bg-color);
  font-size: var(--body-font-size);
  font-family: var(--body-font);
}

p {
  font-size: var(--body-font-size);
  line-height: var(--body-line-height);
  font-family: var(--body-font);
}

pre {
  font-family: "Inconsolata", "Lucida Sans", monospace;
}

header hgroup h1.logo {
  background: transparent;
  font-family: var(--body-font);
  font-size: 1.5em;
  text-align: center;
  letter-spacing: 0.25em;
  text-transform: uppercase;
  font-weight: normal;
  margin: 0;
  padding: 0.25em
}

header hgroup h2.tagline {
  background: transparent;
  text-align: center;
  color: var(--seseragi-blue);
  font-size: var(--body-font-size);
  font-family: var(--body-font);
  padding: 0.25em;
  margin: 0;
  /* border: 1px red solid; */
}

.pin-to-top {
  position: sticky;
  top: 0;
}

.top {
  padding-top: 1em;
}

.prose {
  font-size: var(--body-font-size);
}

.wide-one-column h1 {
  text-align: center;
  font-size: var(--body-font-size);
}

/* Sesseragi 2018 - Layout */

/* Panels */
.panel {
  background: transparent url(../img/page_background_gray.png);
  background-repeat: repeat-x;
  background-position: top;
  background-color: var(--bg-color);
  padding-top: 0.5em;
  width: 100%;
}

/* CSS Grid */
.grid-content-img {
  display: grid;
  grid-template-columns: 3fr 3fr;
  margin: 2% auto;
  grid-gap: 25px;
  margin-top: 0px;
}

.stupid_container_for_css_grid {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: auto;
  margin: 0;
  grid-gap: 3px;
  margin-top: 0px;
}

.action {
  margin: 0 0 0 0;
  display: block;
  grid-template-columns: 2fr 2fr;
  grid-template-rows: auto;
}

/* Footer */
footer {
  background: transparent url(../img/page_background_gray.png);
  background-repeat: repeat-x;
  background-position: top;
  padding: 1em;
  font-size: 0.75em;
  text-align: center;
  min-height: 7em;
}


/* Homepage */
section h1 {
  padding-left: 1em;
}

section p {
  padding-left: 1em;
}


/* Article */

article {
  font-size: inherit;
  overflow-wrap: break-word;
}

article h1 {
  /* This really needs a gutter on the left of the grid. */
  padding-left: 1em;
}

article p {
  padding-left: 1em;
}

/* responsive images */
article img {  height: auto;  width: 100%; }


/* Drop Cap */
.drop-cap {
  font-family: var(--drop-cap-font);
  font-size: 3.0em;
  font-stretch: normal;
  font-weight: 700;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid #444;
  color: #444;
  display: -ms-flexbox;
  display: flex;
  float: left; /* Necessary for drop cap */
  -ms-flex-pack: center;
  justify-content: center;
  margin: 8px 10px 4px 0;
  text-transform: uppercase;
  height: 84px;
  width: 84px;
}

.with-circle {
  line-height: 120px;
  border-radius: 50%;
  text-align: center;
  border: 2px solid #3377;
}

/* Seseragi 2018 - Media */
/* This media query reduces the number of columns to one.
 */
@media (min-width: 255px) {
  .grid-content {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: auto;
    margin: var(--layout-margin);
    grid-gap: 25px;
    margin-top: 0px;
  }
}

.grid-content {
    margin-top: auto;
    margin-left: auto;
    margin-bottom: 0%;
    margin-right: auto;
}

/* This media query reduces the number of columns to two.
 */
@media (min-width: 500px) {
  .grid-content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    margin: var(--layout-margin);
    grid-gap: 25px;
    margin-top: 0px;
  }
}

/* Homepage layout */

/* This media query reduces the number of columns to three.
 */
@media (min-width: 700px) {
  .grid-content {
    display: grid;
    /* grid-template-columns: 0.3fr 0.3fr 0.3fr; */
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: auto;
    margin: var(--layout-margin);
    grid-gap: 25px;
    margin-top: 0px;
  }
}

/* Menu Component */

nav {
  display: none;
  border: 1px red solid;
}

nav a, .action a {
  text-decoration: none
}


.panel-button {
  color: #000;
  background-color: #fff;
  border: 2px solid #bbb;
  border-radius: 65px;
  padding-top: .3em;
  padding-bottom: .7em;
  font-weight: 400;
  font-size: var(--body-font-size);
  line-height: 1.3;
  text-shadow: none;
  box-shadow: none;
  text-transform: uppercase;
}

/* Scrolling */
.scrolltop {
  transition:
    opacity 1s,
    display 1s allow-discrete;
  /* Equivalent to
  transition: all 1s allow-discrete; */
}


/* Container holding the image and the text */
.container {
  position: relative;
  text-align: center;
  color: white;
}

/* Centered text */
.centered {
    border-width: 1px;
    border-color: white;
    border-style: solid;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 1em;
}

.action {
  margin: 0 0 0 0;
  display: block;
  grid-template-columns: 2fr 2fr;
  grid-template-rows: auto;
}


/* Flows */
    .pin { 
        position: sticky;
        position: -webkit-sticky;
        top: 0;
        /* height: 100%;
        width: 50%; */
    }

    .pin-to-top {
        position: sticky;
        top: 0;
        /* Critical to prevent sticky overlapping sticky header. */
        z-index: 1;
    }

    .scroller {
        height: 30%;
        overflow-y: scroll;
        scroll-snap-type: y mandatory;
        scroll-padding: 40px;
    }

    .message-panel { 
        height: 50%;
        background-color:mediumpurple;
        padding: 1em
    }

    .message {
        padding: 2em
    }

    .notebook-panel {
        height: 50%;
        background-color:gainsboro;
        padding: 1em;
    }

